Layout & Bugs
used bootstrap layout template (css grid) to optimize page layout content. Created unique layout experience for XL (deskop) and <L (mobile) breakpoints.
Fixed element layout overlap

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ img {
 	width:100%;
 }
 
+.my_story {
+	height: 600px;
+}
+
 /* 
 div {
 	display: flex;
